--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="email">Email</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="submit">Submit</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="welcome_user">WELCOME USER</string>
+    <string name="profile">Profile</string>
+    <string name="home">Home</string>
+    <string name="history">History</string>
+    <string name="reports">Reports</string>
+    <string name="logout">Logout</string>
 </resources>
