--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="history">History</string>
     <string name="reports">Reports</string>
     <string name="logout">Logout</string>
+    <string name="capture_image">Capture Image</string>
 </resources>
