--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="reports">Reports</string>
     <string name="logout">Logout</string>
     <string name="capture_image">Capture Image</string>
+    <string name="categories">Categories</string>
 </resources>
